packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_10.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 267
expression: output
---
==INPUT==


import { $, component$ } from '@builder.io/qwik';
const Header = $((decl1, {decl2}, [decl3]) => {

    const hola = ident1.no;
    ident2;
    const a = ident1 + ident3;
    const b = ident1 + ident3;
    ident4(ident5, [ident6], {ident7}, {key: ident8});
    class Some {
        prop = ident9;
        method() {
            return ident10;
        }
    }

    return (
        <div onClick={(ident11) => ident11 + ident12} required={false}/>
    )
});

============================= header_wlr3xni6u38.tsx (ENTRY POINT)==

export const Header_WlR3xnI6u38 = (decl1, { decl2 }, [decl3])=>{
    ident1.no;
    ident2;
    ident1, ident3;
    ident1, ident3;
    ident4(ident5, [
        ident6
    ], {
        ident7
    }, {
        key: ident8
    });
    class Some {
        prop = ident9;
        method() {
            return ident10;
        }
    }
    return <div onClick={(ident11)=>ident11 + ident12} required={false}/>;
};
export { _hW } from "@builder.io/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/project/test.tsx\"],\"names\":[],\"mappings\":\"kCAEiB,CAAC,OAAO,EAAC,KAAK,EAAC,EAAE,CAAC,MAAM;IAExB,OAAO,EAAE;IACtB;IACU,QAAS;IACT,QAAS;IACnB,OAAO,QAAQ;QAAC;KAAO,EAAE;QAAC;IAAM,GAAG;QAAC,KAAK;IAAM;IAC/C,MAAM;QACF,OAAO,OAAO;QACd,SAAS;YACL,OAAO;QACX;IACJ;IAEA,QACK,IAAI,SAAS,CAAC,UAAY,UAAU,SAAS,UAAU;AAEhE\"}")
/*
{
  "origin": "project/test.tsx",
  "name": "Header_WlR3xnI6u38",
  "entry": null,
  "displayName": "Header",
  "hash": "WlR3xnI6u38",
  "canonicalFilename": "header_wlr3xni6u38",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    69,
    455
  ]
}
*/
============================= project/test.tsx ==

import { qrl } from "@builder.io/qwik";
/*#__PURE__*/ qrl(()=>import("../header_wlr3xni6u38"), "Header_WlR3xnI6u38");


Some("{\"version\":3,\"sources\":[],\"names\":[],\"mappings\":\"\"}")
== DIAGNOSTICS ==

[]
